<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin" >

    <TextView
        style="@style/text_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:layout_marginTop="15.0dip"
        android:padding="0.0dip"
        android:text="Change Password"
        android:textColor="@color/black" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dp"
        android:padding="0dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

        <EditText
            android:id="@+id/email"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_edit_background"
            android:hint="@string/email"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHighlight="@color/hint_color"
            android:visibility="gone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPassword_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dp"
        android:padding="0dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

        <EditText
            android:id="@+id/oldPassword"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_edit_background"
            android:hint="@string/password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHighlight="@color/hint_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPass_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dp"
        android:padding="0dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

        <EditText
            android:id="@+id/newPass"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_edit_background"
            android:hint="@string/new_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHighlight="@color/hint_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmNewPass_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dp"
        android:padding="0dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

        <EditText
            android:id="@+id/confirmNewPass"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_edit_background"
            android:hint="@string/new_confirm_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHighlight="@color/hint_color" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15.0dp"
        android:layout_marginTop="8.0dp"
        android:orientation="horizontal"
        android:padding="0.0dip" >

        <Button
            android:id="@+id/cancel"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8.0dip"
            android:layout_weight="1"
            android:background="@drawable/signup_button_background"
            android:shadowColor="@color/white"
            android:shadowDx=".4"
            android:shadowRadius=".3"
            android:text="Dismiss"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/submit"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/signup_button_background"
            android:shadowColor="@color/white"
            android:shadowDx=".4"
            android:shadowRadius=".3"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>