<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp" >

            <include layout="@layout/header" />
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            style="@style/MyCustomTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            android:visibility="gone" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/facebook_guest"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/appbarLayout"
        android:background="@drawable/bg" >

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/facebook" />

        <Button
            android:id="@+id/checkoutAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/facebook"
            android:layout_alignRight="@+id/facebook"
            android:layout_marginTop="70dp"
            android:text="CHECKOUT AS A GUEST"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="or"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPassword_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook_guest"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="0dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

        <EditText
            android:id="@+id/email"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHighlight="@color/hint_color"
            android:textSize="@dimen/text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPassword_text_input_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassword_text_input_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="0dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

        <EditText
            android:id="@+id/password"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/hint_color"
            android:textSize="@dimen/text_size" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword_text_input_layout1"
        android:layout_below="@+id/confirmPassword_text_input_layout1"
        android:layout_marginTop="10dp"
        android:text="Show Password"
        android:textColor="#666666" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_marginTop="20dp"
        android:text="Forget Password ?"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/verifyUser"
        style="@style/text_16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="left"
        android:padding="0.0dp"
        android:text="Verify User"
        android:textColor="@color/blue"
        android:visibility="gone" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="LOGIN WITH APP2FOOD"
        android:padding="20dp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/signup"
        android:layout_marginLeft="5dp"
        android:textColor="@color/app_theme_color"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don&apos;t have an account yet?"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/text_size"
        android:layout_alignBaseline="@+id/signup_text"
        android:layout_alignBottom="@+id/signup_text"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="By Logging in, you agree to our"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/signup_text"

        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/termncondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/textView1"

        android:layout_below="@+id/signup_text"
        android:layout_centerHorizontal="true" />

</RelativeLayout>